# magicMirror

./: .gitignore  readme.md  test.txt
MagicMirrorI2S1/: MagicMirrorI2S1.ino  README.md  audioFolderInit.cpp  audioFolderInit.h  audioPlayer.cpp  audioPlayer.h  chooseFile.cpp  chooseFile.h  global.cpp  global.h  randomWavPlayer.cpp  randomWavPlayer.h  readAudio.cpp  readAudio.h  saveAudio.cpp  saveAudio.h
MictestMagicMir2/: MictestMagicMir2.ino
MictestMagicMirror/: MictestMagicMirror.ino
Test/MictestMagicMir2/: MictestMagicMir2.ino
Test/PLEASE/: PLEASE.ino
Test/magicMirrorQuickAudioTest/: magicMirrorQuickAudioTest.ino
Test/monoPeakMeter/: monoPeakMeter.ino
magicMirrorBela/: CMakeCache.txt  MagicMirrorI2S1.ino  Makefile  README.md  audioFolderInit.cpp  audioFolderInit.h  chooseFile.cpp  chooseFile.h  circularBuffer.cpp  circularBuffer.h  delay.cpp  delay.h  effect.h  global.cpp  global.h  low-passFilter.cpp  low-passFilter.h  randomWavPlayer.cpp  randomWavPlayer.h  readAudio.cpp  readAudio.h  render.cpp  saveAudio.cpp  saveAudio.h  settings.json
magicMirrorBela/CMakeLocal/: CMakeLists.txt
magicMirrorBela/Teensyscript/: Teensyscript.ino
monoPeakMeter/: monoPeakMeter.ino
